<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.userDetails.UserDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageUser"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:background="@color/purple_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPersonalData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_margin"
            app:cardCornerRadius="4dp"
            app:cardElevation="@dimen/card_view_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageUser">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/standard_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:textSize="@dimen/title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/labelGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/gender"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvName" />

                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    app:layout_constraintStart_toEndOf="@+id/labelGender"
                    app:layout_constraintTop_toBottomOf="@+id/tvName" />

                <TextView
                    android:id="@+id/labelNat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/nationality"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvGender" />

                <TextView
                    android:id="@+id/tvNat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    app:layout_constraintStart_toEndOf="@+id/labelNat"
                    app:layout_constraintTop_toBottomOf="@+id/tvGender" />

                <TextView
                    android:id="@+id/labelDob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/date_of_birth"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvNat" />

                <TextView
                    android:id="@+id/tvDob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    app:layout_constraintStart_toEndOf="@+id/labelDob"
                    app:layout_constraintTop_toBottomOf="@+id/tvNat" />

                <TextView
                    android:id="@+id/labelPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/phone_number"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDob" />

                <TextView
                    android:id="@+id/tvPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:textColor="@color/link"
                    app:layout_constraintStart_toEndOf="@+id/labelPhoneNumber"
                    app:layout_constraintTop_toBottomOf="@+id/tvDob" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_margin"
            app:cardCornerRadius="4dp"
            app:cardElevation="@dimen/card_view_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvPersonalData">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/standard_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/country"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    app:layout_constraintStart_toEndOf="@+id/labelCountry"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/labelCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/city"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCountry" />

                <TextView
                    android:id="@+id/tvCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    app:layout_constraintStart_toEndOf="@+id/labelCity"
                    app:layout_constraintTop_toBottomOf="@+id/tvCountry" />

                <TextView
                    android:id="@+id/labelStreet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/street"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCity" />

                <TextView
                    android:id="@+id/tvStreet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:textColor="@color/link"
                    app:layout_constraintStart_toEndOf="@+id/labelStreet"
                    app:layout_constraintTop_toBottomOf="@+id/tvCity" />

                <TextView
                    android:id="@+id/labelPostcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/postcode"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvStreet" />

                <TextView
                    android:id="@+id/tvPostcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    app:layout_constraintStart_toEndOf="@+id/labelPostcode"
                    app:layout_constraintTop_toBottomOf="@+id/tvStreet" />

                <TextView
                    android:id="@+id/labelTimezone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/timezone"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPostcode" />

                <TextView
                    android:id="@+id/tvTimezone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    app:layout_constraintStart_toEndOf="@+id/labelTimezone"
                    app:layout_constraintTop_toBottomOf="@+id/tvPostcode" />

                <TextView
                    android:id="@+id/labelCoordinates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/coordinates"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTimezone" />

                <TextView
                    android:id="@+id/tvCoordinates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:textColor="@color/link"
                    app:layout_constraintStart_toEndOf="@+id/labelCoordinates"
                    app:layout_constraintTop_toBottomOf="@+id/tvTimezone" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_margin"
            app:cardCornerRadius="4dp"
            app:cardElevation="@dimen/card_view_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvLocation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/standard_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/email"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="email"
                    android:padding="@dimen/text_padding"
                    app:layout_constraintStart_toEndOf="@+id/labelEmail"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/labelUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/username"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    app:layout_constraintStart_toEndOf="@+id/labelUsername"
                    app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

                <TextView
                    android:id="@+id/labelPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/password"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

                <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    app:layout_constraintStart_toEndOf="@+id/labelPassword"
                    app:layout_constraintTop_toBottomOf="@+id/tvUsername" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
